bdr.BDR2.scala.error
Compilation error:
BDR2:7: error: type mismatch;
 found   : Char('C')
 required: String
  case 'C' => forward(); forward(); forward()
       ^